# One-Job-One-Resume

./: .gitignore  INSTALL.md  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
data/: my_experiences.example.json  my_profile.example.json
references/: experience-format.md
schemas/: experience.schema.json  profile.schema.json
scripts/resume_skill/: __init__.py  __main__.py  init_data.py  jd_image.py  jd_parser.py  paths.py  pdf.py  pipeline.py  renderer.py  retriever.py
templates/classic_zh/: style.css  template.html
