[project]
name = "resume-skill"
version = "0.1.0"
description = "Three-step JD screenshot to tailored Chinese resume skill"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
vision = ["httpx>=0.27"]
dev = ["pytest>=8.0"]

[project.scripts]
resume-skill = "resume_skill.__main__:main"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["resume_skill*"]
